fixed up alignment on csv page and the title sizes in mobile. fixed the logo in mobile.

--- a/src/app/navigation/navigation.component.scss
+++ b/src/app/navigation/navigation.component.scss
@@ -7,9 +7,16 @@
   padding: 2px;
 }
 
+#rrcc-logo {
+  width: 390px;
+}
+
 @media only screen and (min-width: 992px) {
   #mobile-logout {
     display: none;
+  }
+  #rrcc-logo {
+    width: 411px;
   }
   #desktop-logout{
     display: block;
