--- a/src/app/policy/policy.component.scss
+++ b/src/app/policy/policy.component.scss
@@ -5,6 +5,11 @@
   margin-bottom: 20px;
 }
 
+/* Policies and Surveys */
+.ackTitle {
+  font-size: 1.4em;
+}
+
 @media only screen and (min-width: 992px) {
   .policy-header {
     font-size: 1.5em;
@@ -29,6 +34,10 @@
   }
   .completed {
     margin-bottom: 0;
+  }
+  /* Policies and Surveys */
+  .ackTitle {
+    font-size: 1.5em;
   }
   .ackBtn {
     float: right;
